FIX: images position mobile REDUX

--- a/wp-content/themes/gfw-blog/scss/_content.scss
+++ b/wp-content/themes/gfw-blog/scss/_content.scss
@@ -557,8 +557,8 @@ img.alignright {
   padding-bottom: 20px;
   background: #FFF;
   @media (max-width: 480px) {
-    margin-right: -10px;
-    padding-left: 5px;
+    margin-right: -6px;
+    padding-left: 2px;
   }
 }
 .tag-cloud-gfw {
